# SpecialFunctions

./: README.md
MultiplePolylogarithms/: LICENSE  README.md  pyproject.toml  theory.nb
MultiplePolylogarithms/notebooks/: exploration.ipynb
MultiplePolylogarithms/src/: hpl.py
