[project]
name = "hpl"
version = "0.1.0"
description = "Harmonic Polylogarithms, Multiple Polylogarithms, and Multiple Zeta Values"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mpmath>=1.3",
    "sympy>=1.12",
    "matplotlib>=3.7",
    "numpy>=1.26",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[project.urls]
Repository = "https://github.com/BhuvaneshBhatt/SpecialFunctions"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
